--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -7,8 +7,7 @@
         app:showAsAction="ifRoom"
         android:enabled="true"
         android:icon="@drawable/home_test"
-        android:iconTint="#2E8379"
-        android:title="나의캐릭터목록"/>
+        android:title="캐릭터 관리"/>
     <item
         android:id="@+id/tab2"
         app:showAsAction="ifRoom"
@@ -20,5 +19,5 @@
         app:showAsAction="ifRoom"
         android:enabled="true"
         android:icon="@drawable/people_test"
-        android:title="일정"/>
+        android:title="일정 관리"/>
 </menu>
