--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--메인컬러-->
+    <color name="main_color">#FF0D47A1</color>
+    <color name="second_color">#9DCAF9</color>
 </resources>
