--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8sp"
     android:layout_marginLeft="4sp"
+    android:layout_marginTop="8sp"
     android:layout_marginRight="4sp"
     android:layout_marginBottom="4sp"
     app:cardBackgroundColor="#ffffff"
@@ -14,59 +14,48 @@
     <LinearLayout
         android:id="@+id/matchListlayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="120sp"
         android:orientation="horizontal"
         android:visibility="visible">
 
         <ImageView
             android:id="@+id/profileImageView"
-            android:layout_width="82sp"
-            android:layout_height="86sp"
+            android:layout_width="50sp"
+            android:layout_height="120sp"
             android:layout_gravity="center_vertical"
             android:padding="5sp"
             app:srcCompat="@drawable/lion_sample" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="79sp"
+            android:layout_height="110sp"
             android:layout_margin="5sp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/matchName"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="40sp"
                 android:text="매칭제목"
                 android:textSize="32sp" />
 
-            <RelativeLayout
+
+            <TextView
+                android:id="@+id/matchDate"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10sp">
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="20sp"
+                android:text="05월 10일"
+                android:textSize="10sp" />
 
-                <TextView
-                    android:id="@+id/matchDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="25sp"
-                    android:layout_marginRight="36sp"
-                    android:text="05월 10일"
-                    android:textSize="16sp" />
+            <TextView
+                android:id="@+id/matchLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="일정 상세 내용 : Ex)하브 000님, 000님 고정"
+                android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/matchLocation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="-3sp"
-                    android:layout_marginEnd="11sp"
-                    android:text="서대문구 홍은동"
-                    android:textSize="16sp" />
-
-            </RelativeLayout>
 
         </LinearLayout>
 
