--- a/app/src/main/res/layout/character_management.xml
+++ b/app/src/main/res/layout/character_management.xml
@@ -8,7 +8,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/matchListRecycler"
+        android:id="@+id/characterListRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="70sp"
-        android:layout_marginRight="30sp"
+        android:layout_marginEnd="30sp"
         android:contentDescription="NewProject"
         android:src="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
