--- a/app/src/main/res/layout/add_character.xml
+++ b/app/src/main/res/layout/add_character.xml
@@ -18,14 +18,14 @@
 
     <!--프로필 부분-->
     <ImageView
+        android:id="@+id/profileImg"
         android:layout_width="100sp"
         android:layout_height="100sp"
-        android:src="@drawable/ic_launcher_background"
         app:layout_constraintTop_toTopOf="@id/profileGuideline"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="10sp"
-        android:layout_marginStart="20sp"
-        />
+        android:layout_marginStart="20sp" />
+
     <TextView
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
@@ -42,6 +42,7 @@
         android:hint="닉네임을 입력하세요"
         android:layout_marginTop="10sp"
         android:textSize="15sp"
+        android:maxLength="12"
         android:background="@drawable/edittext_round_corner"
         app:layout_constraintTop_toBottomOf="@id/nameText"
         app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
@@ -63,8 +64,7 @@
         android:spinnerMode="dropdown"
         android:minHeight="100sp"
         app:layout_constraintTop_toTopOf="@id/classGuideline"
-        app:layout_constraintLeft_toLeftOf="@id/editGuideline"
-        android:entries="@array/classArray"/>
+        app:layout_constraintLeft_toLeftOf="@id/editGuideline" />
 
     <!--아이템 레벨-->
     <TextView
@@ -83,7 +83,9 @@
         android:textSize="15sp"
         android:background="@drawable/edittext_round_corner"
         app:layout_constraintTop_toTopOf="@id/itemlevelGuideline"
-        app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
+        app:layout_constraintLeft_toLeftOf="@id/editGuideline"
+        android:maxLength="4"
+        android:inputType="number"/>
 
     <Button
         android:id="@+id/saveBtn"
