--- a/app/src/main/res/layout/contents_management.xml
+++ b/app/src/main/res/layout/contents_management.xml
@@ -37,7 +37,7 @@
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_margin="5sp"
-            android:src="@drawable/arcana"/>
+            android:src="@drawable/arcanist"/>
         <ImageView
             android:id="@+id/character2"
             android:layout_width="40sp"
@@ -49,7 +49,7 @@
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_margin="5sp"
-            android:src="@drawable/riper"/>
+            android:src="@drawable/reaper"/>
         <ImageView
             android:id="@+id/character4"
             android:layout_width="40sp"
@@ -61,13 +61,13 @@
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_margin="5sp"
-            android:src="@drawable/warload"/>
+            android:src="@drawable/warlord"/>
         <ImageView
             android:id="@+id/character6"
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:layout_margin="5sp"
-            android:src="@drawable/soseress"/>
+            android:src="@drawable/sorceress"/>
     </LinearLayout>
 
     <LinearLayout
