--- a/app/src/main/res/layout/calendar_management.xml
+++ b/app/src/main/res/layout/calendar_management.xml
@@ -12,6 +12,7 @@
         android:layout_height="250dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -31,7 +32,7 @@
             android:layout_width="100sp"
             android:layout_height="100sp"
             android:layout_marginLeft="15sp"
-            android:src="@drawable/lion_sample"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
@@ -39,7 +40,7 @@
             android:id="@+id/goastShip"
             android:layout_width="100sp"
             android:layout_height="100sp"
-            android:src="@drawable/lion_sample"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toStartOf="@+id/fieldBoss"
             app:layout_constraintHorizontal_bias="0.493"
             app:layout_constraintStart_toEndOf="@+id/chaosGate"
@@ -50,7 +51,7 @@
             android:layout_width="100sp"
             android:layout_height="100sp"
             android:layout_marginRight="15sp"
-            android:src="@drawable/lion_sample"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
@@ -59,10 +60,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7sp"
-            android:text="유령선"
-            app:layout_constraintEnd_toEndOf="@+id/fieldBoss"
-            app:layout_constraintStart_toStartOf="@+id/fieldBoss"
-            app:layout_constraintTop_toBottomOf="@+id/fieldBoss" />
+            android:text="카오스게이트"
+            app:layout_constraintEnd_toEndOf="@+id/chaosGate"
+            app:layout_constraintStart_toStartOf="@+id/chaosGate"
+            app:layout_constraintTop_toBottomOf="@+id/chaosGate" />
 
         <TextView
             android:id="@+id/prokion_FieldBoss"
@@ -70,19 +71,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7sp"
             android:text="필드보스"
-            app:layout_constraintEnd_toEndOf="@+id/goastShip"
-            app:layout_constraintStart_toStartOf="@+id/goastShip"
-            app:layout_constraintTop_toBottomOf="@+id/goastShip" />
+            app:layout_constraintEnd_toEndOf="@+id/fieldBoss"
+            app:layout_constraintStart_toStartOf="@+id/fieldBoss"
+            app:layout_constraintTop_toBottomOf="@+id/fieldBoss" />
 
         <TextView
             android:id="@+id/prokion_GoastShip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7sp"
-            android:text="카오스게이트"
-            app:layout_constraintEnd_toEndOf="@+id/chaosGate"
-            app:layout_constraintStart_toStartOf="@+id/chaosGate"
-            app:layout_constraintTop_toBottomOf="@+id/chaosGate" />
+            android:text="유령선"
+            app:layout_constraintEnd_toEndOf="@+id/goastShip"
+            app:layout_constraintStart_toStartOf="@+id/goastShip"
+            app:layout_constraintTop_toBottomOf="@+id/goastShip" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
