--- a/app/src/main/res/layout/add_plan.xml
+++ b/app/src/main/res/layout/add_plan.xml
@@ -39,6 +39,7 @@
             android:hint="일정 제목을 입력해 주세요" />
 
         <EditText
+            android:id="@+id/textField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
