--- a/app/src/main/res/layout/add_plan.xml
+++ b/app/src/main/res/layout/add_plan.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="400dp"
-    android:layout_height="510sp">
+    android:layout_height="600sp">
 
 
     <TextView
@@ -34,9 +34,9 @@
             android:id="@+id/createRoomName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
             android:layout_marginBottom="10sp"
-            android:hint="일정 제목을 입력해 주세요" />
+            android:hint="일정 제목을 입력해 주세요"
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/textField"
@@ -45,40 +45,43 @@
             android:gravity="top"
             android:hint="일정 내용을 입력해 주세요"
             android:inputType="text|textMultiLine"
-            android:minLines="10" />
+            android:minLines="5" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="150sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
+        android:background="@drawable/round"
+        android:gravity="center"
+        android:text="날짜설정"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AddPlan" />
 
     <LinearLayout
         android:id="@+id/selectImportancy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20sp"
+        android:layout_margin="10sp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AddPlan">
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-        <ImageButton
-            android:id="@+id/lowImportancy"
-            android:layout_width="100sp"
-            android:layout_height="50sp"
-            android:src="@drawable/lion_sample" />
+        <DatePicker
+            android:id="@+id/datePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner" />
 
-        <ImageButton
-            android:id="@+id/middleImportancy"
-            android:layout_width="100sp"
-            android:layout_height="50sp"
-            android:layout_margin="10sp"
-            android:src="@drawable/lion_sample"/>
 
-        <ImageButton
-            android:id="@+id/highImportancy"
-            android:layout_width="100sp"
-            android:layout_height="50sp"
-            android:src="@drawable/lion_sample"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
     </LinearLayout>
 
     <Button
@@ -100,10 +103,8 @@
         android:backgroundTint="@color/teal_200"
         android:text="취소"
         android:textColor="@color/white"
-
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/selectImportancy" />
-
 
 
     <androidx.constraintlayout.widget.Guideline
