--- a/app/src/main/res/layout/character_info.xml
+++ b/app/src/main/res/layout/character_info.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="310sp"
+    android:layout_width="wrap_content"
     android:layout_height="420sp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="280sp"
         android:layout_height="wrap_content"
         android:text="캐릭터 정보"
         android:textSize="30sp"
@@ -17,23 +17,24 @@
         app:layout_constraintLeft_toLeftOf="parent"
         />
     <ImageButton
-        android:id="@+id/editBtn"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-
-    <ImageButton
+        android:background="@drawable/delete"
         android:id="@+id/deleteBtn"
         android:layout_width="30sp"
         android:layout_height="30sp"
         android:layout_marginTop="10sp"
-        android:layout_marginStart="20sp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/editBtn"
+        app:layout_constraintLeft_toRightOf="@id/title"
+        />
+
+    <ImageButton
+        android:id="@+id/nameEditBtn"
+        android:background="@drawable/edit"
+        android:layout_width="20sp"
+        android:layout_height="20sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="5sp"
+        app:layout_constraintTop_toTopOf="@id/profileGuideline"
+        app:layout_constraintLeft_toRightOf="@id/nameEdit"
         />
 
     <ImageView
@@ -47,10 +48,10 @@
 
     <EditText
         android:id="@+id/nameEdit"
-        android:layout_width="150sp"
+        android:layout_width="160sp"
         android:layout_height="30sp"
         android:hint="@string/null_text"
-        android:textColorHint="@color/black"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:maxLength="12"
         android:background="@drawable/edittext_round_corner"
@@ -60,7 +61,7 @@
         android:enabled="false"/>
 
     <TextView
-        android:id="@+id/className"
+        android:id="@+id/classNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/null_text"
@@ -76,26 +77,38 @@
         android:text="아이템 레벨"
         android:layout_marginTop="10sp"
         android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@id/className"
+        app:layout_constraintTop_toBottomOf="@id/classNameText"
         app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
 
     <EditText
         android:id="@+id/levelEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="60sp"
         android:layout_height="wrap_content"
         android:hint="@string/null_text"
-        android:textColorHint="@color/black"
+        android:textColor="@color/black"
         android:textSize="15sp"
-        android:maxLength="12"
+        android:maxLength="4"
+        android:inputType="number"
         android:background="@drawable/edittext_round_corner"
         android:layout_marginTop="10sp"
         android:layout_marginStart="5sp"
-        app:layout_constraintTop_toBottomOf="@id/className"
+        app:layout_constraintTop_toBottomOf="@id/classNameText"
         app:layout_constraintLeft_toRightOf="@id/levelText"
         android:enabled="false"/>
 
+    <ImageButton
+        android:id="@+id/levelEditBtn"
+        android:background="@drawable/edit"
+        android:layout_width="20sp"
+        android:layout_height="20sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="5sp"
+        app:layout_constraintTop_toBottomOf="@id/classNameText"
+        app:layout_constraintLeft_toRightOf="@id/levelEdit"
+        />
+
     <ImageView
-        android:src="@color/black"
+        android:src="@drawable/gold"
         android:layout_width="30sp"
         android:layout_height="30sp"
         android:layout_marginStart="20sp"
@@ -112,15 +125,18 @@
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
+        android:id="@+id/totReward"
         android:layout_width="wrap_content"
         android:layout_height="30sp"
-        android:text="@string/null_text"
+        android:text="149000"
         android:textSize="20sp"
         android:layout_marginTop="40sp"
+        android:layout_marginEnd="10sp"
         app:layout_constraintTop_toTopOf="@id/rewardGuideline"
-        app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
+        app:layout_constraintRight_toLeftOf="@id/goldtext1"/>
 
     <TextView
+        android:id="@+id/goldtext1"
         android:layout_width="wrap_content"
         android:layout_height="30sp"
         android:text="골드"
@@ -132,7 +148,7 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <ImageView
-        android:src="@color/black"
+        android:src="@drawable/gold"
         android:layout_width="30sp"
         android:layout_height="30sp"
         android:layout_marginStart="20sp"
@@ -149,15 +165,18 @@
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
+        android:id="@+id/currentReward"
         android:layout_width="wrap_content"
         android:layout_height="30sp"
-        android:text="@string/null_text"
+        android:text="13500"
         android:textSize="20sp"
         android:layout_marginTop="40sp"
+        android:layout_marginEnd="10sp"
         app:layout_constraintTop_toTopOf="@id/currentGuideline"
-        app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
+        app:layout_constraintRight_toLeftOf="@id/goldtext2"/>
 
     <TextView
+        android:id="@+id/goldtext2"
         android:layout_width="wrap_content"
         android:layout_height="30sp"
         android:text="골드"
@@ -206,23 +225,22 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="280dp" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/buttonGuideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="55dp" />
+        app:layout_constraintGuide_begin="365dp" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/editGuideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="130sp" />
+        app:layout_constraintGuide_begin="140sp" />
     
     <View
         android:background="@color/black"
-        android:layout_width="280sp"
+        android:layout_width="300sp"
         android:layout_height="1dp"
         android:layout_marginTop="10sp"
         app:layout_constraintTop_toBottomOf="@id/profileImg"
