--- a/app/src/main/res/layout/calendar_management.xml
+++ b/app/src/main/res/layout/calendar_management.xml
@@ -98,14 +98,14 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefreshlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="320sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/prokion">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/matchListRecycler"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
