--- a/app/src/main/res/layout/add_plan.xml
+++ b/app/src/main/res/layout/add_plan.xml
@@ -89,7 +89,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="20sp"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/main_color"
         android:text="등록"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -100,7 +100,7 @@
         android:layout_width="100sp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20sp"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/main_color"
         android:text="취소"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
