--- a/app/src/main/res/layout/add_character.xml
+++ b/app/src/main/res/layout/add_character.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="340sp"
     android:layout_height="350sp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!--캐릭터 추가 다이얼로그-->
 
+    <!--타이틀-->
     <TextView
         android:id="@+id/title"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:text="캐릭터 설정"
-        android:textSize="30sp"
+        android:background="@drawable/round"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textColor="@color/white"
         android:layout_marginTop="10sp"
         android:layout_marginStart="20sp"
+        android:layout_marginEnd="20sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
-    <!--프로필 부분-->
+    <!--프로필 이미지(직업 아이콘)-->
     <ImageView
         android:id="@+id/profileImg"
         android:layout_width="100sp"
@@ -26,10 +32,11 @@
         android:layout_marginTop="10sp"
         android:layout_marginStart="20sp" />
 
+    <!--닉네임-->
     <TextView
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
-        android:layout_height="30sp"
+        android:layout_height="wrap_content"
         android:text="닉네임"
         android:textSize="20sp"
         android:layout_marginTop="20sp"
@@ -48,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@id/nameText"
         app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
 
-    <!--클래스 이름-->
+    <!--직업(클래스) 이름-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="30sp"
@@ -89,15 +96,17 @@
         android:maxLength="4"
         android:inputType="number"/>
 
+    <!--저장 취소버튼-->
     <Button
         android:id="@+id/saveBtn"
         android:layout_width="70sp"
         android:layout_height="wrap_content"
         android:text="저장"
         android:textColor="@color/main_color"
-        android:layout_marginEnd="10sp"
+        android:layout_marginStart="130sp"
         app:layout_constraintTop_toTopOf="@id/buttonGuideline"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
+
     <Button
         android:id="@+id/cancelBtn"
         android:layout_width="70sp"
@@ -139,6 +148,5 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="140sp" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
