--- a/app/src/main/res/layout/add_plan.xml
+++ b/app/src/main/res/layout/add_plan.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="400dp"
     android:layout_height="600sp">
+    <!--일정 추가 다이얼로그-->
 
-
+    <!--타이틀-->
     <TextView
         android:id="@+id/textView"
         android:layout_width="150sp"
@@ -30,6 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
+        <!--일정 제목-->
         <EditText
             android:id="@+id/createRoomName"
             android:layout_width="match_parent"
@@ -38,6 +39,7 @@
             android:hint="일정 제목을 입력해 주세요"
             android:inputType="text" />
 
+        <!--일정 내용-->
         <EditText
             android:id="@+id/textField"
             android:layout_width="match_parent"
@@ -49,6 +51,7 @@
 
     </LinearLayout>
 
+    <!--날짜 설정-->
     <TextView
         android:id="@+id/textView2"
         android:layout_width="150sp"
@@ -84,6 +87,7 @@
 
     </LinearLayout>
 
+    <!--등록 취소 버튼-->
     <Button
         android:id="@+id/submitAddPlan"
         android:layout_width="100dp"
