--- a/app/src/main/res/layout/character_info.xml
+++ b/app/src/main/res/layout/character_info.xml
@@ -1,42 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="420sp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!--캐릭터 정보, 수정 다이얼로그-->
 
+    <!--타이틀-->
     <TextView
         android:id="@+id/title"
         android:layout_width="280sp"
-        android:layout_height="wrap_content"
+        android:layout_height="30sp"
         android:text="캐릭터 정보"
-        android:textSize="30sp"
+        android:textAlignment="center"
+        android:background="@drawable/round"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         android:layout_marginTop="10sp"
         android:layout_marginStart="20sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
-    <ImageButton
-        android:background="@drawable/delete"
-        android:id="@+id/deleteBtn"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
-        android:layout_marginTop="10sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/title"
-        />
 
-    <ImageButton
-        android:id="@+id/nameEditBtn"
-        android:background="@drawable/edit"
-        android:layout_width="20sp"
-        android:layout_height="20sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="5sp"
-        app:layout_constraintTop_toTopOf="@id/profileGuideline"
-        app:layout_constraintLeft_toRightOf="@id/nameEdit"
-        />
-
+    <!--프로필 이미지-->
     <ImageView
         android:id="@+id/profileImg"
         android:layout_width="100sp"
@@ -46,6 +31,7 @@
         android:layout_marginTop="10sp"
         android:layout_marginStart="20sp" />
 
+    <!--닉네임 수정칸 (처음 비활성화)-->
     <EditText
         android:id="@+id/nameEdit"
         android:layout_width="160sp"
@@ -60,6 +46,7 @@
         app:layout_constraintLeft_toLeftOf="@id/editGuideline"
         android:enabled="false"/>
 
+    <!--직업 이름-->
     <TextView
         android:id="@+id/classNameText"
         android:layout_width="wrap_content"
@@ -70,6 +57,7 @@
         app:layout_constraintTop_toBottomOf="@id/nameEdit"
         app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
 
+    <!--아이템 레벨-->
     <TextView
         android:id="@+id/levelText"
         android:layout_width="wrap_content"
@@ -80,6 +68,7 @@
         app:layout_constraintTop_toBottomOf="@id/classNameText"
         app:layout_constraintLeft_toLeftOf="@id/editGuideline"/>
 
+    <!--아이템 레벨 수정 칸 (처음 비활성화)-->
     <EditText
         android:id="@+id/levelEdit"
         android:layout_width="60sp"
@@ -96,17 +85,7 @@
         app:layout_constraintLeft_toRightOf="@id/levelText"
         android:enabled="false"/>
 
-    <ImageButton
-        android:id="@+id/levelEditBtn"
-        android:background="@drawable/edit"
-        android:layout_width="20sp"
-        android:layout_height="20sp"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="5sp"
-        app:layout_constraintTop_toBottomOf="@id/classNameText"
-        app:layout_constraintLeft_toRightOf="@id/levelEdit"
-        />
-
+    <!--골드 아이콘-->
     <ImageView
         android:src="@drawable/gold"
         android:layout_width="30sp"
@@ -115,6 +94,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@id/rewardGuideline"/>
 
+    <ImageView
+        android:src="@drawable/gold"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
+        android:layout_marginStart="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/currentGuideline"/>
+
+    <!--주간 기대보상-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="30sp"
@@ -124,6 +112,7 @@
         app:layout_constraintTop_toTopOf="@id/rewardGuideline"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
+    <!--주간 기대보상이 출력될 텍스트뷰, 현재 임의의 값을 넣음-->
     <TextView
         android:id="@+id/totReward"
         android:layout_width="wrap_content"
@@ -147,14 +136,7 @@
         app:layout_constraintTop_toTopOf="@id/rewardGuideline"
         app:layout_constraintRight_toRightOf="parent"/>
 
-    <ImageView
-        android:src="@drawable/gold"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
-        android:layout_marginStart="20sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/currentGuideline"/>
-
+    <!--현재까지 획득한 보상-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="30sp"
@@ -164,6 +146,7 @@
         app:layout_constraintTop_toTopOf="@id/currentGuideline"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
+    <!--현재 획득 보상이 출력될 텍스트뷰, 현재 임의의 값을 넣음-->
     <TextView
         android:id="@+id/currentReward"
         android:layout_width="wrap_content"
@@ -187,6 +170,42 @@
         app:layout_constraintTop_toTopOf="@id/currentGuideline"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <!--삭제버튼-->
+    <ImageButton
+        android:background="@drawable/delete"
+        android:id="@+id/deleteBtn"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
+        android:layout_marginTop="10sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/title"
+        />
+
+    <!--닉네임수정 토글버튼-->
+    <ImageButton
+        android:id="@+id/nameEditBtn"
+        android:background="@drawable/edit"
+        android:layout_width="20sp"
+        android:layout_height="20sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="5sp"
+        app:layout_constraintTop_toTopOf="@id/profileGuideline"
+        app:layout_constraintLeft_toRightOf="@id/nameEdit"
+        />
+
+    <!--아이템 레벨 수정 토글버튼-->
+    <ImageButton
+        android:id="@+id/levelEditBtn"
+        android:background="@drawable/edit"
+        android:layout_width="20sp"
+        android:layout_height="20sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="5sp"
+        app:layout_constraintTop_toBottomOf="@id/classNameText"
+        app:layout_constraintLeft_toRightOf="@id/levelEdit"
+        />
+
+    <!--저장 버튼-->
     <Button
         android:id="@+id/saveBtn"
         android:layout_width="70sp"
@@ -196,6 +215,8 @@
         android:layout_marginEnd="10sp"
         app:layout_constraintTop_toTopOf="@id/buttonGuideline"
         app:layout_constraintRight_toRightOf="parent"/>
+
+    <!--취소 버튼-->
     <Button
         android:id="@+id/cancelBtn"
         android:layout_width="70sp"
