--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,6 +10,7 @@
     app:cardBackgroundColor="#ffffff"
     app:cardCornerRadius="10sp"
     app:cardElevation="5sp">
+    <!--일정 리스트 아이템-->
 
     <LinearLayout
         android:id="@+id/matchListlayout1"
@@ -18,6 +19,7 @@
         android:orientation="horizontal"
         android:visibility="visible">
 
+        <!--프로필 이미지-->
         <ImageView
             android:id="@+id/profileImageView"
             android:layout_width="50sp"
@@ -32,30 +34,31 @@
             android:layout_margin="5sp"
             android:orientation="vertical">
 
+            <!--일정 이름-->
             <TextView
-                android:id="@+id/matchName"
+                android:id="@+id/planName"
                 android:layout_width="match_parent"
                 android:layout_height="40sp"
-                android:text="매칭제목"
+                android:text="@string/null_text"
                 android:textSize="32sp" />
 
-
+            <!--일정 날짜-->
             <TextView
-                android:id="@+id/matchDate"
+                android:id="@+id/planDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginRight="20sp"
-                android:text="05월 10일"
+                android:layout_marginStart="20sp"
+                android:text="@string/null_text"
                 android:textSize="10sp" />
 
+            <!--일정 내용-->
             <TextView
-                android:id="@+id/matchLocation"
+                android:id="@+id/planText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="일정 상세 내용 : Ex)하브 000님, 000님 고정"
+                android:text="@string/null_text"
                 android:textSize="16sp" />
-
 
         </LinearLayout>
 
